# cookiecutter-pyboardpack

./: LICENSE  README.md  cookiecutter.json  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: new_contributor_pr.yml  test.yml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: lint.sh  test.sh  test_dependencies.sh
tests/: conftest.py  default_context.yml  test_bake_project.py  test_hooks.py
{{cookiecutter.dist_name}}/: .coveragerc  README.md  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.dist_name}}/.github/: dependabot.yml
{{cookiecutter.dist_name}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.dist_name}}/.github/actions/comment-docs-preview-in-pr/: action.yml
{{cookiecutter.dist_name}}/.github/workflows/: build-docs.yml  latest-changes.yml  new_contributor_pr.yml  preview-docs.yml  publish.yml  test.yml
{{cookiecutter.dist_name}}/docs/: missing-translation.md
{{cookiecutter.dist_name}}/docs/en/: mkdocs.yml
{{cookiecutter.dist_name}}/docs/en/docs/: contributing.md  help-{{ cookiecutter.dist_name }}.md  index.md  release-notes.md
{{cookiecutter.dist_name}}/docs/en/overrides/: main.html
{{cookiecutter.dist_name}}/docs/ru/: mkdocs.yml
{{cookiecutter.dist_name}}/docs/ru/docs/: index.md
{{cookiecutter.dist_name}}/scripts/: docs.py  format-imports.sh  format.sh  lint.sh  test.sh
{{cookiecutter.dist_name}}/tests/: test_main.py
{{cookiecutter.dist_name}}/{{cookiecutter.package_name}}/: __init__.py
