[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "{{ cookiecutter.package_name }}"
dist-name = "{{ cookiecutter.dist_name }}"
author = "{{ cookiecutter.full_name }}"
author-email = "{{ cookiecutter.email }}"
home-page = "{{ cookiecutter.repository_url }}"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
description-file = "README.md"
requires-python = ">=3.6"
requires = [
]

[tool.flit.metadata.urls]
Documentation = "{{ cookiecutter.docs_url }}"

[tool.flit.metadata.requires-extra]
test = [
    "pytest ==7.2.0",
    "pytest-cov ==4.0.0",
    "mypy ==0.991",
    "flake8 ==6.0.0",
    "black ==22.10.0",
    "isort ==5.10.1",
]
dev = [
    "autoflake ==2.0.0",
    "flake8 ==6.0.0",
    "pre-commit",
    "tox >=3.27.1",
]
doc = [
    "mkdocs ==1.4.2",
    "mkdocs-material ==8.5.10",
    "markdown ==3.2.1",
    "markdown-include ==0.8.0",
    "mkdocs-markdownextradata-plugin ==0.2.5",
    "typer ==0.7.0",
    "pyyaml ==6.0.0",
]

[tool.isort]
profile = "black"
known_first_party = ["{{ cookiecutter.package_name }}",]
